--- a/src/styles.css
+++ b/src/styles.css
@@ -14,9 +14,9 @@ input[type="text"] {
 }
 
 .name-tag {
-  background-color: red;
-  padding: 10px 0 20px;
-  border-radius: 20px;
+  background-color: rgb(0, 255, 106);
+  padding: 10px 0 50px;
+  border-radius: 50px;
   width: 350px;
   margin: 20px 10px;
   display: inline-block;
