--- a/src/styles.css
+++ b/src/styles.css
@@ -21,10 +21,9 @@ input[type="text"] {
   margin: 20px 10px;
   display: inline-block;
   position: relative;
-  border: 1px solid blue;
 }
 .title {
-  color: white;
+  color: rgb(254, 161, 22);
   margin: 0;
   font-size: 40px;
 }
