--- a/src/styles.css
+++ b/src/styles.css
@@ -54,4 +54,28 @@ h2 {
 .name-tag__delete:hover {
   background-color: rgb(254, 161, 22);
   border-radius: 50%;
+  transform: translateY(0) scale(2);
+  animation: animate 0.4s;
+}
+
+
+
+
+
+@keyframes animate{
+    0%{
+        transform: rotate(0deg) translateX(0px);
+    }
+    25%{
+        transform: rotate(-10deg) translateX(-10px);
+    }
+    50%{
+        transform: rotate(0deg) translateX(0px);
+    }
+    75%{
+        transform: rotate(10deg) translateX(10px);
+    }
+    100%{
+        transform: rotate(0deg) translateX(0px);
+    }
 }
