making the animation

--- a/src/styles.css
+++ b/src/styles.css
@@ -63,7 +63,23 @@ h2 {
 
 
 
-
+@keyframes animated{
+    0%{
+        transform: rotate(0deg) translateX(0px);
+    }
+    25%{
+        transform: rotate(360deg) translateX(260px);
+    }
+    50%{
+        transform: rotate(0deg) translateX(0px);
+    }
+    75%{
+        transform: rotate(360deg) translateX(260px);
+    }
+    100%{
+        transform: rotate(0deg) translateX(0px);
+    }
+}
 
 @keyframes animate{
     0%{
