--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,9 @@ input[type="text"] {
 h1 {
   color: rgb(119, 0, 255);
 }
+h1:hover {
+  animation: animated 5.0s;
+}
 
 .name-tag {
   background-color: rgb(119, 0, 255);
