--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,9 @@
   font-family: sans-serif;
   text-align: center;
 }
-
+body{
+  background-color: #fffced;
+}
 /* Add Name Input */
 input {
   padding: 5px;
